homepage updated to semi resemble what we need

--- a/project2/src/app/app.component.html
+++ b/project2/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to Spotify474 API project!
-  </h1>
+<div class="btn-group">
+    <button> Home</button>
+    <button>Playlist</button>
+    <button>Share</button>
+    <button>Log In</button>
 </div>
-<hr/>
-<router-outlet></router-outlet>  
+  <router-outlet></router-outlet>
+
+  
+
