--- a/project2/src/app/app.component.html
+++ b/project2/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="btn-group">
-    <button> Home</button>
-    <button>Playlist</button>
+    <button routerLink="home"> Home</button>
+    <button routerLink="playlist">Playlist</button>
     <button>Share</button>
     <button>Log In</button>
 </div>
