--- a/project2/src/app/app.component.html
+++ b/project2/src/app/app.component.html
@@ -2,8 +2,8 @@
 <div class="btn-group">
     <button routerLink="home"> Home</button>
     <button routerLink="playlist">Playlist</button>
-    <button>Share</button>
-    <button>Log In</button>
+    <button>About</button>
+    
 </div>
   <router-outlet></router-outlet>
 
