--- a/project2/src/app/home/home.component.html
+++ b/project2/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <h1>
-  Welcome to the CISC 474 Spotify App.
+  Welcome to the CISC 474 Trivia API App
 </h1>
 <h2>
-  Sign into Spotify Below
+  Choose Play From the Menu to Begin
 </h2>
-<button>SIGN IN</button>
+
 
