--- a/project2/src/app/app.component.html
+++ b/project2/src/app/app.component.html
@@ -1,11 +1,22 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="btn-group">
-    <button routerLink="home"> Home</button>
-    <button routerLink="playlist">Playlist</button>
-    <button>About</button>
-    
-</div>
+<nav class="navbar-wrapper navbar-default navbar-fixed-top navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Trivia</a>
+      </div>
+      <div class="navbar">
+          <ul class="nav navbar-nav">
+            <li routerLinkActive='active'>
+              <a routerLink="home">Home</a>
+            </li>
+            <li routerLinkActive='active'>
+              <a routerLink="playlist">Play</a>
+            </li>
+            <li routerLinkActive='active'>
+              <a routerLink="about">About</a>
+            </li>
+          </ul>
+      </div>
+    </div>
+  </nav>
   <router-outlet></router-outlet>
-
   
-
