--- a/project2/src/app/app.component.html
+++ b/project2/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar-wrapper navbar-default navbar-fixed-top navbar-static-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Trivia</a>
+        <a class="navbar-brand text-success" href="#">Trivia</a>
       </div>
       <div class="navbar">
           <ul class="nav navbar-nav">
