--- a/project2/src/app/playlist/playlist.component.html
+++ b/project2/src/app/playlist/playlist.component.html
@@ -1,6 +1,7 @@
 <br>
 <br>
 <br>
+<div class="container">
 <div class = "results-box">
 <div *ngIf="showResults; then thenBlock else elseBlock"></div>
 <ng-template #thenBlock>
@@ -28,4 +29,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
